--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,10 +15,9 @@ jobs:
       
       - name: Install radion theme
         id: theme
-        run: git clone https://github.com/micahkepe/radion themes
+        run: git clone https://github.com/micahkepe/radion ./themes
 
       - run: |
-          ls .
           ls themes
           ls themes/radion
       
