--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,11 +15,7 @@ jobs:
       
       - name: Install radion theme
         id: theme
-        run: git clone https://github.com/micahkepe/radion ./themes
-
-      - run: |
-          ls themes
-          ls themes/radion
+        run: git clone https://github.com/micahkepe/radion ./themes/radion
       
       - name: Build site with Zola
         id: build
